# Narae-UAV-Project

./: README.md
Homework/ROS2_Basic/노초환/: README.md
Homework/ROS2_Basic/노초환/Assignment2/src/my_package/: package.xml  setup.py
Homework/ROS2_Basic/노초환/Assignment2/src/my_package/my_package/: publish_node.py  subscribe_node.py
Homework/ROS2_Basic/노초환/assignment3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
Homework/ROS2_Basic/노초환/assignment3/log/: latest_build
Homework/ROS2_Basic/노초환/assignment3/src/my_package/: .gitignore  setup.py
Homework/ROS2_Basic/노초환/assignment3/src/my_package/launch/: rocket.launch.py
Homework/ROS2_Basic/노초환/assignment4/src/my_package/: CMakeLists.txt  package.xml
Homework/ROS2_Basic/송재윤/asgmt_2/my_asgmt_2/: setup.py
Homework/ROS2_Basic/송재윤/asgmt_2/my_asgmt_2/my_asgmt_2/: hello_publisher.py  hello_subscriber.py
Homework/ROS2_Basic/송재윤/asgmt_3/my_asgmt_2/: package.xml  setup.cfg  setup.py
Homework/ROS2_Basic/송재윤/asgmt_3/my_asgmt_2/launch/: pbsb.launch.py
Homework/ROS2_Basic/유민석/homework2_pkg/: package.xml  setup.cfg  setup.py
Homework/ROS2_Basic/유민석/homework2_pkg/homework2_pkg/: hello_publisher.py  hello_subscriber.py
Homework/ROS2_Basic/유민석/homework3_pkg/: package.xml  setup.cfg  setup.py
Homework/ROS2_Basic/유민석/homework3_pkg/homework3_pkg/: hello_publisher.py  hello_subscriber.py
Homework/ROS2_Basic/유민석/homework3_pkg/launch/: homework3_launch.py
Homework/ROS2_Basic/유민석/homework4_pkg/: package.xml  setup.cfg  setup.py
과제/1번째 과제/: README.md
과제/2번째 과제/: README.md
(+7 files in other folders)
